[package]
name = "smackdown"
version = "0.1.0"
edition = "2024"

[dependencies]
fastrand = "2.3.0"
local-ip-address = "0.6.10"
macroquad = "0.4.14"
midi-msg = "0.8.1"
midir = "0.10.3"
queued_animated_sprites_macroquad = "=0.1.0"
# TODO: Replace the * by the latest version number.
rapier2d = { version = "*", features = [ "simd-stable" ] }
tiny_http = "0.12.0"
